config_mgmt/gitops-dev/bootstrap/deploy/sepsisdetection-ui/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sepsisdetection-ui
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: sepsisdetection-ui
  wildcardPolicy: None
